--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
       width: 100%;
     }
 
+    /* Quando passi su altre voci, nasconde l'underline della pagina attuale */
+    @supports selector(nav:has(a:hover)) {
+      nav:has(a:hover) a[aria-current="page"]::after,
+      nav:has(a:focus-visible) a[aria-current="page"]::after {
+        width: 0;
+      }
+    }
+
+
     /* HERO */
     .hero {
       position: relative;
@@ -314,21 +323,33 @@
       line-height: 1.75;
     }
 
-    .service-tags {
+    .services-meta {
       display: flex;
       flex-wrap: wrap;
-      gap: 0.6rem;
-      margin-bottom: 1.4rem;
+      gap: 0.55rem 1rem;
+      margin: 0.15rem 0 1.35rem;
+      color: var(--anthracite);
+      font-size: 0.95rem;
+      line-height: 1.4;
     }
 
-    .service-tag {
-      font-size: 0.84rem;
-      padding: 0.35rem 0.68rem;
-      border-radius: 999px;
-      border: 1px solid var(--line);
-      background: rgba(255,255,255,0.02);
-      color: #d6d6d6;
+    .services-meta span {
+      position: relative;
+      padding-left: 0.9rem;
     }
+
+    .services-meta span::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 5px;
+      height: 5px;
+      border-radius: 999px;
+      background: rgba(201,167,76,0.9);
+    }
+
 
     .services-grid {
       display: grid;
@@ -601,11 +622,12 @@
         un flusso di lavoro chiaro e collaborativo.
       </p>
 
-      <div class="service-tags" aria-label="Tipologie">
-        <span class="service-tag">Privati</span>
-        <span class="service-tag">Eventi</span>
-        <span class="service-tag">Attività locali</span>
-      </div>
+      <p class="services-meta" aria-label="Tipologie di clienti">
+        <span>Privati</span>
+        <span>Eventi</span>
+        <span>Attività locali</span>
+      </p>
+
 
       <div class="services-grid">
         <article class="service-card">
