--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     nav a {
       position: relative;
-      color: var(--white);
+      color: var(--white); /* sempre bianco di default */
       text-decoration: none;
       font-weight: 600;
       font-size: 0.98rem;
@@ -124,20 +124,22 @@
       transition: width var(--transition);
     }
 
+    /* Hover/focus: oro + bandiera */
     nav a:hover,
     nav a:focus-visible {
       color: var(--golden);
     }
 
     nav a:hover::after,
-    nav a:focus-visible::after,
-    nav a[aria-current="page"]::after {
+    nav a:focus-visible::after {
       width: 100%;
     }
 
+    /* Anche la pagina corrente resta bianca se non in hover */
     nav a[aria-current="page"] {
-      color: var(--golden);
+      color: var(--white);
     }
+
 
 
     /* Mantieni underline su pagina corrente.
