--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
 
     /* Mantieni underline su pagina corrente.
        Lo nascondi solo se hover/focus è su una voce DIVERSA */
-    @supports selector(nav:has(a:hover)) {
+  /*  @supports selector(nav:has(a:hover)) {
       nav:has(a:hover:not([aria-current="page"])) a[aria-current="page"]::after,
       nav:has(a:focus-visible:not([aria-current="page"])) a[aria-current="page"]::after {
         width: 0;
       }
-    }
+    }*/
 
 
 
