--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
       gap: 1.8rem;
     }
 
-    nav a {
+    nav a{
       position: relative;
-      color: var(--white); /* sempre bianco di default */
+      color: var(--white);
       text-decoration: none;
       font-weight: 600;
       font-size: 0.98rem;
@@ -112,44 +112,44 @@
       outline: none;
     }
 
-    nav a::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0;
-      height: 3px;
-      border-radius: 3px 3px 0 0;
+    nav a::after{
+      content:"";
+      position:absolute;
+      left:0;
+      bottom:0;
+      width:0;
+      height:3px;
+      border-radius:3px 3px 0 0;
       background: linear-gradient(90deg, #008C45, #F4F5F0, #CD212A);
       transition: width var(--transition);
     }
 
-    /* Hover/focus: oro + bandiera */
-    nav a:hover,
-    nav a:focus-visible {
-      color: var(--golden);
+    /* Stato attivo: testo bianco + underline sempre presente */
+    nav a[aria-current="page"]{
+      color: var(--white);
     }
-
-    nav a:hover::after,
-    nav a:focus-visible::after {
+    nav a[aria-current="page"]::after{
       width: 100%;
     }
 
-    /* Anche la pagina corrente resta bianca se non in hover */
-    nav a[aria-current="page"] {
-      color: var(--white);
+    /* Hover / focus: testo oro + underline */
+    nav a:hover,
+    nav a:focus-visible{
+      color: var(--golden);
+    }
+    nav a:hover::after,
+    nav a:focus-visible::after{
+      width: 100%;
     }
 
-
-
-    /* Mantieni underline su pagina corrente.
-       Lo nascondi solo se hover/focus è su una voce DIVERSA */
-  /*  @supports selector(nav:has(a:hover)) {
+    /* Quando hoveri (o focus) una voce DIVERSA, togli underline alla pagina attuale */
+    @supports selector(nav:has(a:hover)) {
       nav:has(a:hover:not([aria-current="page"])) a[aria-current="page"]::after,
-      nav:has(a:focus-visible:not([aria-current="page"])) a[aria-current="page"]::after {
+      nav:has(a:focus-visible:not([aria-current="page"])) a[aria-current="page"]::after{
         width: 0;
       }
-    }*/
+    }
+
 
 
 
