--- a/index.html
+++ b/index.html
@@ -609,8 +609,8 @@
         </p>
         <p>
           Seguo ogni progetto dall’idea iniziale alle riprese e al montaggio finale.
-          Per me conta sia il risultato visivo sia il percorso: contatto diretto, ascolto e
-          contenuti coerenti con il tuo stile e il tuo obiettivo.
+          Per me conta sia il risultato visivo sia il percorso: ascolto e
+          contenuti coerenti con il tuo stile e il tuo obiettivo sono per me i punti essenziali in ogni progetto.
         </p>
       </div>
     </section>
@@ -619,7 +619,7 @@
       <h2 id="cosa-offro-title">Cosa offro</h2>
       <p class="services-intro">
         Creo contenuti video con riprese da terra e da aria, mantenendo sempre
-        un flusso di lavoro chiaro e collaborativo.
+        collaborazione e progettazione delle riprese al primo posto.
       </p>
 
       <p class="services-meta" aria-label="Tipologie di clienti">
@@ -632,17 +632,17 @@
       <div class="services-grid">
         <article class="service-card">
           <h3><span class="service-dot"></span>Riprese da terra</h3>
-          <p>Inquadrature pulite e dinamiche per raccontare al meglio ogni progetto.</p>
+          <p>Inquadrature pulite e studiate al dettaglio per raccontare al meglio ogni progetto.</p>
         </article>
 
         <article class="service-card">
-          <h3><span class="service-dot"></span>Riprese aeree (DJI Air 3S)</h3>
+          <h3><span class="service-dot"></span>Riprese aeree</h3>
           <p>Shot aerei per dare più impatto, profondità e identità al video.</p>
         </article>
 
         <article class="service-card">
           <h3><span class="service-dot"></span>Montaggio video</h3>
-          <p>Editing curato, ritmo giusto e consegna finale pronta per social o web.</p>
+          <p>Editing curato, ritmo coerente e consegna finale pronta per social, web, o semplicemente ricordi.</p>
         </article>
 
         <article class="service-card">
