--- a/index.html
+++ b/index.html
@@ -608,9 +608,9 @@
           Offro servizi video professionali per privati, eventi e attività.
         </p>
         <p>
-          Seguo ogni progetto dall’idea iniziale alle riprese e al montaggio finale.
+          Seguo ogni progetto dall’idea iniziale, alle riprese e al montaggio finale.
           Per me conta sia il risultato visivo sia il percorso: ascolto e
-          contenuti coerenti con il tuo stile e il tuo obiettivo sono per me i punti essenziali in ogni progetto.
+          contenuti coerenti con il tuo stile e il tuo obiettivo sono per me i punti essenziali per la buona riuscita di ogni progetto.
         </p>
       </div>
     </section>
