--- a/index.html
+++ b/index.html
@@ -771,22 +771,22 @@
   <div class="logo-grid" role="list" aria-label="Loghi certificazioni">
     <!-- A1-A3 -->
     <div class="logo-item" role="listitem" title="Patentino Drone A1-A3">
-      <img src="assets/logos/cert-a1a3.svg" alt="Patentino Drone A1-A3">
+      <img src="assets/logos/cert-a1a3.png" alt="Patentino Drone A1-A3">
     </div>
 
     <!-- CoverDrone Professionale -->
     <div class="logo-item" role="listitem" title="Assicurazione CoverDrone Professionale">
-      <img src="assets/logos/cert-coverdrone-pro.svg" alt="Assicurazione CoverDrone Professionale">
+      <img src="assets/logos/cert-coverdrone-pro.png" alt="Assicurazione CoverDrone Professionale">
     </div>
 
     <!-- Codice Operatore (placeholder) -->
     <div class="logo-item" role="listitem" title="Codice Operatore UAS (in arrivo)">
-      <img src="assets/logos/cert-operatore-blank.svg" alt="Codice Operatore UAS (in arrivo)">
+      <img src="assets/logos/cert-operatore-uas.png" alt="Codice Operatore UAS (in arrivo)">
     </div>
 
     <!-- Privacy / Liberatorie -->
     <div class="logo-item" role="listitem" title="Privacy & Liberatorie su richiesta">
-      <img src="assets/logos/cert-privacy.svg" alt="Privacy e liberatorie su richiesta">
+      <img src="assets/logos/cert-privacy.png" alt="Privacy e liberatorie su richiesta">
     </div>
   </div>
 </section>
@@ -808,9 +808,9 @@
     </a>
 
     <!-- placeholder pronti -->
-    <div class="logo-item" role="listitem"><span>Cliente abituale</span></div>
-    <div class="logo-item" role="listitem"><span>Partner creativo</span></div>
-    <div class="logo-item" role="listitem"><span>Collaborazione</span></div>
+    <div class="logo-item" role="listitem"><span>Slot</span></div>
+    <div class="logo-item" role="listitem"><span>Slot</span></div>
+    <div class="logo-item" role="listitem"><span>Slot</span></div>
   </div>
 </section>
 
