--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
       </div>
     </div>
 
-    <div class="footer-bottom">© 2025 tobia.me — Tutti i diritti riservati</div>
+    <div class="footer-bottom">© 2025-2026 tobia.me — Tutti i diritti riservati</div>
   </footer>
 
   <script>
