Replace image formats in index.html from .webp to .png

--- a/index.html
+++ b/index.html
@@ -776,17 +776,17 @@
 
     <!-- CoverDrone Professionale -->
     <div class="logo-item" role="listitem" title="Assicurazione CoverDrone Professionale">
-      <img src="cert-coverdrone-pro.webp" alt="Assicurazione CoverDrone Professionale">
+      <img src="cert-coverdrone-pro.png" alt="Assicurazione CoverDrone Professionale">
     </div>
 
     <!-- Codice Operatore (placeholder) -->
     <div class="logo-item" role="listitem" title="Codice Operatore UAS (in arrivo)">
-      <img src="cert-operatore-uas.webp" alt="Codice Operatore UAS (in arrivo)">
+      <img src="cert-operatore-uas.png" alt="Codice Operatore UAS (in arrivo)">
     </div>
 
     <!-- Privacy / Liberatorie -->
     <div class="logo-item" role="listitem" title="Privacy & Liberatorie su richiesta">
-      <img src="cert-privacy.webp" alt="Privacy e liberatorie su richiesta">
+      <img src="cert-privacy.png" alt="Privacy e liberatorie su richiesta">
     </div>
   </div>
 </section>
