Update filter buttons and project categories in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -607,15 +607,15 @@
       <!-- FILTRI -->
       <div class="filters" role="toolbar" aria-label="Filtri portfolio">
         <button class="chip" type="button" aria-pressed="true" data-filter="all">Tutti</button>
-        <button class="chip" type="button" aria-pressed="false" data-filter="drone">Drone</button>
-        <button class="chip" type="button" aria-pressed="false" data-filter="cars">Auto</button>
-        <button class="chip" type="button" aria-pressed="false" data-filter="shorts">Shorts</button>
+        <button class="chip" type="button" aria-pressed="false" data-filter="drone">Terra</button>
+        <button class="chip" type="button" aria-pressed="false" data-filter="cars">Aria</button>
+        <button class="chip" type="button" aria-pressed="false" data-filter="shorts">Brevi</button>
       </div>
 
       <div class="projects-grid" id="grid" aria-live="polite">
         <!-- 1: YouTube (lazy) -->
         <article class="project-card panel fade-up"
-          data-category="drone"
+          data-category="aria"
           data-type="youtube"
           data-title="Colli by Air"
           data-description="Riprese aeree sui colli di Bologna: strade panoramiche, colline e scorci sulla città visti dall’alto. Volo realizzato con DJI Air 3S, con movimenti fluidi e inquadrature pensate per valorizzare il paesaggio."
@@ -652,7 +652,7 @@
 
         <!-- 2: immagine + link (cars / shorts) -->
         <article class="project-card panel fade-up"
-          data-category="cars shorts"
+          data-category="terra brevi"
           data-type="image"
           data-title="First car shooting"
           data-description="Primo shooting automobilistico: Aixam 721 Sport con modifiche estetiche. Video dedicato con tagli rapidi e dettagli sul mezzo."
