Update filter buttons for portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -607,9 +607,9 @@
       <!-- FILTRI -->
       <div class="filters" role="toolbar" aria-label="Filtri portfolio">
         <button class="chip" type="button" aria-pressed="true" data-filter="all">Tutti</button>
-        <button class="chip" type="button" aria-pressed="false" data-filter="drone">Terra</button>
-        <button class="chip" type="button" aria-pressed="false" data-filter="cars">Aria</button>
-        <button class="chip" type="button" aria-pressed="false" data-filter="shorts">Brevi</button>
+        <button class="chip" type="button" aria-pressed="false" data-filter="terra">Terra</button>
+        <button class="chip" type="button" aria-pressed="false" data-filter="aria">Aria</button>
+        <button class="chip" type="button" aria-pressed="false" data-filter="brevi">Brevi</button>
       </div>
 
       <div class="projects-grid" id="grid" aria-live="polite">
